Make confirm button in app sidebar comment field more visible. Make background colour of confirm button in text input have same background colour as the text input. Add border to "Add link | Link file" hover box that appears in text, also fix the styling for the text input when adding a link. (#271)

--- a/css/base/_elements.scss
+++ b/css/base/_elements.scss
@@ -62,6 +62,12 @@ textarea:not(:disabled) {
     }
 }
 
+input[type="text"] + .icon-confirm,
+input[type="password"] + .icon-confirm,
+input[type="email"] + .icon-confirm {
+    background-color: var(--color-background-darker) !important;
+}
+
 /* Action items -------------------------------------------------------------- */
 
 .action-input .action-input__label,
